--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "quik"
+    "start": "quik --port 3000"
   },
   "author": "Alabe Duarte",
   "devDependencies": {
