--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "format": "prettier-eslint \"**/*.js\" --write"
   },
   "author": "Alabe Duarte",
   "dependencies": {
     "express": "^4.16.2"
   },
   "devDependencies": {
+    "eslint": "^4.15.0",
+    "eslint-plugin-jest": "^21.5.0",
     "jest": "^22.0.4",
+    "prettier-eslint-cli": "^4.7.0",
     "supertest": "^3.0.0"
   }
 }
