chore(build): add logger to the server

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   },
   "author": "Alabe Duarte",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^4.15.0",
