feat(thermometer-sensor): add out-of-range evaluation

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node index",
     "test": "jest",
+    "test:watch": "yarn test --watchAll",
     "lint": "eslint .",
     "format": "prettier-eslint \"**/*.js\" --write"
   },
