--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   },
   "author": "Alabe Duarte",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "folktale": "^2.0.1",
+    "http-status-codes": "^1.3.0",
     "winston": "^2.4.0"
   },
   "devDependencies": {
