--- a/thermometer-sensor/package.json
+++ b/thermometer-sensor/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "eslint": "^4.15.0",
     "eslint-plugin-jest": "^21.5.0",
+    "eventsource": "^1.0.5",
     "jest": "^22.0.4",
     "prettier-eslint-cli": "^4.7.0",
-    "supertest": "^3.0.0"
+    "request": "^2.83.0",
+    "supertest": "^3.0.0",
+    "then-sleep": "^1.0.1"
   }
 }
