--- a/notification/package.json
+++ b/notification/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "thermometer-sensor",
+  "name": "notification",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
     "test": "jest",
     "test:watch": "yarn test --watchAll",
     "lint": "eslint .",
     "format": "prettier-eslint \"**/*.js\" --write"
   },
   "author": "Alabe Duarte",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "folktale": "^2.0.1",
-    "http-status-codes": "^1.3.0",
-    "winston": "^2.4.0"
-  },
   "devDependencies": {
     "eslint": "^4.15.0",
     "eslint-plugin-jest": "^21.5.0",
@@ -24,6 +16,6 @@
     "jest": "^22.0.4",
     "prettier-eslint-cli": "^4.7.0",
     "request": "^2.83.0",
-    "supertest": "^3.0.0"
+    "then-sleep": "^1.0.1"
   }
 }
