chore(test): add integration test for out of range temperatures

--- a/notification/nginx.conf
+++ b/notification/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     location ~ /pub/(.+)$ {
       nchan_publisher;
-      nchan_channel_id $1 "_test_broadcast_";
+      nchan_channel_id $1;
     }
 
     location ~ /sub/(.+)$ {
@@ -23,6 +23,7 @@ http {
     }
 
     location = /upstream/sub {
+      internal;
       proxy_pass http://thermometer-sensor:8080/nchan/sub;
       proxy_set_header X-Channel-Id $nchan_channel_id;
     }
