--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 SENSOR_SERVER_PORT=8080
 NCHAN_URL=http://notification/pub/pragma-brewery
+SENSOR_REDIS_URL=redis://redis:6379
