--- a/thermometer-sensor/package.json
+++ b/thermometer-sensor/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "folktale": "^2.0.1",
     "http-status-codes": "^1.3.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "winston": "^2.4.0"
   },
