--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 SENSOR_SERVER_PORT=8080
-NCHAN_URL=http://notification/pub/pragma-brewery
+SENSOR_URL=http://thermometer-sensor:8080
 SENSOR_REDIS_URL=redis://redis:6379
+NCHAN_URL=http://notification
