--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,4 +57,6 @@ services:
       - ./integration-tests/node_modules:/home/integration-tests/node_modules:delegated
     environment:
       - NODE_ENV=$NODE_ENV
+      - NCHAN_URL=$NCHAN_URL
+      - SENSOR_URL=$SENSOR_URL
       - SENSOR_REDIS_URL=$SENSOR_REDIS_URL
