--- a/data-ingestion/package.json
+++ b/data-ingestion/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "eslint": "^4.15.0",
     "eslint-plugin-jest": "^21.5.0",
+    "faker": "^4.1.0",
     "prettier-eslint-cli": "^4.7.0"
   }
 }
