--- a/thermometer-sensor/package.json
+++ b/thermometer-sensor/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "jest",
+    "test": "jest --forceExit",
     "test:watch": "yarn test --watchAll",
     "lint": "eslint .",
     "format": "prettier-eslint \"**/*.js\" --write"
