--- a/thermometer-sensor/package.json
+++ b/thermometer-sensor/package.json
@@ -12,6 +12,7 @@
   "author": "Alabe Duarte",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "folktale": "^2.0.1",
     "http-status-codes": "^1.3.0",
