--- a/thermometer-sensor/package.json
+++ b/thermometer-sensor/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index",
     "test": "jest --coverage --forceExit",
-    "test:watch": "yarn test --watchAll",
+    "test:watch": "jest --watchAll",
     "lint": "eslint .",
     "format": "prettier-eslint \"**/*.js\" --write"
   },
