--- a/web-client/package.json
+++ b/web-client/package.json
@@ -30,10 +30,12 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "faker": "^4.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "nock": "^10.0.2",
     "node-fetch": "^2.2.0",
-    "prettier-eslint-cli": "^4.7.1"
+    "prettier-eslint-cli": "^4.7.1",
+    "sass": "^1.14.3"
   },
   "jest": {
     "collectCoverage": false,
@@ -45,7 +47,8 @@
     ],
     "cacheDirectory": ".tmp",
     "moduleNameMapper": {
-      "^test-support$": "<rootDir>/test-support"
+      "^test-support$": "<rootDir>/test-support",
+      "\\.(css|scss)$": "identity-obj-proxy"
     },
     "setupTestFrameworkScriptFile": "<rootDir>/test-support/enzyme-adapter-setup.js",
     "setupFiles": [
