--- a/web-client/.babelrc
+++ b/web-client/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["react-app"]
+  "presets": [["@babel/env", {"modules": false}], "@babel/preset-react"],
+  "env": {
+    "test": {
+      "presets": [["@babel/env"], "@babel/preset-react"]
+    }
+  }
 }
