--- a/web-client/package.json
+++ b/web-client/package.json
@@ -12,13 +12,15 @@
     "format": "prettier-eslint \"**/*.js\" --write"
   },
   "dependencies": {
-    "babel-preset-react-app": "^6.1.0",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.1.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.7.0",
@@ -35,7 +37,9 @@
     "nock": "^10.0.2",
     "node-fetch": "^2.2.0",
     "prettier-eslint-cli": "^4.7.1",
-    "sass": "^1.14.3"
+    "regenerator-runtime": "^0.12.1",
+    "sass": "^1.14.3",
+    "synchronous-promise": "^2.0.6"
   },
   "jest": {
     "collectCoverage": false,
