--- a/web-client/package.json
+++ b/web-client/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jest": "^21.27.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "eventsource": "^1.0.7",
     "faker": "^4.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
