--- a/web-client/package.json
+++ b/web-client/package.json
@@ -12,8 +12,10 @@
     "format": "prettier-eslint \"**/*.js\" --write"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.0",
+    "react-chartkick": "^0.3.0",
     "react-dom": "^16.6.0"
   },
   "devDependencies": {
