--- a/web-client/package.json
+++ b/web-client/package.json
@@ -24,23 +24,23 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/runtime": "^7.7.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^21.27.0",
+    "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eventsource": "^1.0.7",
     "faker": "^4.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "nock": "^10.0.2",
+    "jest": "^24.9.0",
+    "nock": "^11.7.0",
     "node-fetch": "^2.6.0",
-    "prettier-eslint-cli": "^4.7.1",
-    "regenerator-runtime": "^0.12.1",
+    "prettier-eslint-cli": "^5.0.0",
+    "regenerator-runtime": "^0.13.3",
     "sass": "^1.23.3",
     "synchronous-promise": "^2.0.10"
   },
@@ -57,7 +57,7 @@
       "^test-support$": "<rootDir>/test-support",
       "\\.(css|scss)$": "identity-obj-proxy"
     },
-    "setupTestFrameworkScriptFile": "<rootDir>/test-support/enzyme-adapter-setup.js",
+    "setupFilesAfterEnv": ["<rootDir>/test-support/enzyme-adapter-setup.js"],
     "setupFiles": [
       "<rootDir>/test-support/fetch.js"
     ]
