--- a/web-client/package.json
+++ b/web-client/package.json
@@ -12,11 +12,11 @@
     "format": "prettier-eslint \"**/*.js\" --write"
   },
   "dependencies": {
-    "chart.js": "^2.7.3",
-    "parcel-bundler": "^1.10.3",
-    "react": "^16.6.0",
+    "chart.js": "^2.9.3",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.12.0",
     "react-chartkick": "^0.3.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -57,7 +57,9 @@
       "^test-support$": "<rootDir>/test-support",
       "\\.(css|scss)$": "identity-obj-proxy"
     },
-    "setupFilesAfterEnv": ["<rootDir>/test-support/enzyme-adapter-setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test-support/enzyme-adapter-setup.js"
+    ],
     "setupFiles": [
       "<rootDir>/test-support/fetch.js"
     ]
